--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -60,7 +60,7 @@
       </a>
     </li>
     {% else %}
-    <li class="nav-item">
+    <li class="nav-item ml-auto">
       <a class="nav-link ajax-register" href="{% url 'account_signup' %}">
         Register
       </a>
