--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,12 +1,10 @@
-<div class="col">
-
-</div>
+<div class="row">
 <div class="col-auto">
   <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
     <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=100&h=100&t=absolute" />
   </a>
 </div>
-<div class="col-auto">
+<div class="col">
   <div class="row">
     <div class="col">
       <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
@@ -32,6 +30,4 @@
     </div>
   </div>
 </div>
-<div class="col">
-
 </div>
