--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -8,53 +8,46 @@
 <div class="container">
   <div class="row" id="podinfo">
     <!-- PODINFO -->
-    <div class="col-sm-3 col-6" id="podinfo-image">
+    <div class="col-4" id="podinfo-image">
       <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
-      <a class="btn btn-primary" data-toggle="collapse" href="#episodeCollapse" aria-expanded="false" aria-controls="episodeCollapse">
-        Show episodes
-      </a>
+        <form id="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+        <p>
+          <span id="n_subscribers">
+            {{ podcast.n_subscribers }}
+          </span>
+          <span id="subscriber">
+            {% if podcast.n_subscribers == 1 %}
+            subsciber
+            {% else %}
+            subscribers
+            {% endif %}
+          </span>
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          {% if podcast.subscribed %}
+          <button type="submit" class="btn btn-outline-primary active sub-button">
+            Unsubscribe
+          {% else %}
+          <button type="submit" class="btn btn-outline-primary sub-button">
+            Subscribe
+          {% endif %}
+          </button>
+        </p>
+      </form>
     </div>
-    <div class="col-6" id="podinfo-main">
+    <div class="col-8" id="podinfo-main">
       <h3>
         {{ podcast.title }}
       </h3>
       <h4>
         <span>
-          By 
+          By
         </span>
         {{ podcast.artist }}
       </h4>
       <p>
         {{ podcast.description|linebreaksbr }}
-      </p>
-    </div>
-    <div class="col-sm-3" id="podinfo-side">
-      <form id="sub-form" action="{% url 'subscribe' %}"
-      id="{{ podcast.itunesid }}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-      <p>
-        {% if podcast.subscribed %}
-          <button type="submit" class="btn btn-outline-primary active sub-button">
-            Unsubscribe
-        {% else %}
-          <button type="submit" class="btn btn-outline-primary sub-button">
-            Subscribe
-        {% endif %}
-          </button>
-        </p>
-      </form>
-      <p>
-        <span id="n_subscribers">
-          {{ podcast.n_subscribers }}
-        </span>
-        <span id="subscriber">
-          {% if podcast.n_subscribers == 1 %}
-          subsciber
-          {% else %}
-          subscribers
-          {% endif %}
-        </span>
       </p>
       <p>
         {% if podcast.genre.supergenre %}
@@ -76,6 +69,13 @@
         </em>
       </p>
     </div>
+  </div>
+  <div class="row" id="podinfo-bottom">
+    <a class="col" id="show-episodes" data-toggle="collapse" href="#episodeCollapse" aria-expanded="false" aria-controls="episodeCollapse">
+      <span>
+        Show episodes
+      </span>
+    </a>
   </div>
 </div>
 {% endblock %}
