--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -22,25 +22,25 @@
 
 <div class="col-sm-2" id="brand">
   <a class="index-link" href="{% url 'index' %}">
-    <span class="">
+    <span class="x a">
       d
     </span>
-    <span class="">
+    <span class="x b">
       o
     </span>
-    <span class="">
+    <span class="x c">
       p
     </span>
-    <span class="">
+    <span class="x d">
       e
     </span>
-    <span class="">
+    <span class="x e">
       p
     </span>
-    <span class="">
+    <span class="x f">
       o
     </span>
-    <span class="">
+    <span class="x g">
       d
     </span>
   </a>
