--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -8,6 +8,7 @@ dopepod
 {% if podcasts %}
 <div class="col" id="results-wrapper">
   <form id="result-form" method="GET" action="{% url 'browse' %}">
+    <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
     {% include 'optionsbar.html' %}
   </form>
   <div class="row results-row">
@@ -42,10 +43,17 @@ dopepod
 </div>
 {% else %}
 <div class="col" id="results-wrapper">
-  {% include 'optionsbar.html' %}
-    <p>
-      No results :p
-    </p>
+  <form id="result-form" method="GET" action="{% url 'browse' %}">
+    <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
+    {% include 'optionsbar.html' %}
+  </form>
+  <div class="row results-row">
+      <div class="col">
+        <p>
+          No results :p
+        </p>
+      </div>
+    </div>
 </div>
 {% endif %}
 {% endblock %}
