--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,54 +1,48 @@
 {% if episodes %}
-<div class="col">
-  <div class="collapse" id="episodeCollapse">
+<div class="collapse" id="episodeCollapse">
+  <div class="col">
     <div class="row">
       <div class="col" id="episodes-wrapper">
-        <div id="episode-accordion" data-children=".item">
-          {% for episode in episodes %}
-            <div class="item">
-              <div class="row">
-                <div class="col-auto">
-                  <a class="btn btn-primary" data-toggle="collapse" data-parent="#episode-accordion" href="#episode-accordion{{ forloop.counter }}" aria-expanded="false" aria-controls="episode-accordion{ forloop.counter }}">
-                    Show more
-                  </a>
-                </div>
-                <div class="col">
-                  {{ episode.title }}
-                </div>
-                <div class="col-auto">
-                  {{ episode.pubDate }}
-                </div>
-                <div class="col-auto">
-                  {{ episode.length }}
-                </div>
-                <div class="col-auto">
-                  <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
-                    {% csrf_token %}
-                    <input type="hidden" name="url" value="{{ episode.url }}">
-                    <input type="hidden" name="type" value="{{ episode.type }}">
-                    <input type="hidden" name="title" value="{{ episode.title }}">
-                    <input type="hidden" name="date" value="{{ episode.pubDate }}">
-                    <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-                    <button class="btn btn-outline-primary" type="submit">
-                      Play
-                    </button>
-                  </form>
-                </div>
-                <div class="col-auto">
-                  <button class="btn btn-outline-primary">
-                    Download
-                  </button>
-                </div>
-              </div>
-              <div class="row">
-                <div id="episode-accordion{{ forloop.counter }}" class="collapse" role="tabpanel">
-                  <p class="mb-3">
-                    {{ episode.summary }}
-                  </p>
-                </div>
-              </div>
+        <div id="episode-accordion" role="tablist">
+        {% for episode in episodes %}
+          <div class="row">
+            <div class="col-auto" role="tab" id="show-more{{ forloop.counter }}">
+              <a data-toggle="collapse" href="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
+                Show more
+              </a>
             </div>
-            <hr />
+            <div class="col">
+              {{ episode.title }}
+            </div>
+            <div class="col-auto">
+              {{ episode.pubDate }}                 
+            </div>
+            <div class="col-auto">
+              {{ episode.length }}
+            </div>
+            <div class="col-auto">
+            <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
+              {% csrf_token %}
+              <input type="hidden" name="url" value="{{ episode.url }}">
+              <input type="hidden" name="type" value="{{ episode.type }}">
+              <input type="hidden" name="title" value="{{ episode.title }}">
+              <input type="hidden" name="date" value="{{ episode.pubDate }}">
+              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+              <button class="btn btn-outline-primary" type="submit">
+                Play
+              </button>
+            </form>
+          </div>
+          <div class="col-auto">
+            <button class="btn btn-outline-primary">
+              Download
+            </button>
+          </div>
+            <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel" aria-labelledby="show-more{{ forloop.counter }}" data-parent="#episode-accordion">
+              {{ episode.summary }}
+            </div>
+          </div>
+          <hr />
           {% endfor %}
         </div>
       </div>
