--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="col-sm-2" id="brand">
-  <a class="index-link" href="{% url 'index' %}">
+  <a class="index-link" id="logo" href="{% url 'index' %}">
     <span class="x a">
       d
     </span>
