--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -33,6 +33,9 @@
       {% block content %}
       {% endblock %}
     </div>
+    <!-- PLAYER -->
+    <div class="container-fluid fixed-bottom color" id="player">
+    </div>
     <!--FOOTER-->
     <footer class="footer">
       <div class="container-fluid">
