--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,7 +6,7 @@ dopepod
 
 {% block content %}
 <!-- MULTI BAR -->
-<div class="container-fluid sticky-top extended" id="bar">
+<div class="container-fluid sticky-top extended" id="flap">
   <div class="row open" id="stage">
     {% block stage %}
     {% endblock %}
