--- a/index/templates/account/login.html
+++ b/index/templates/account/login.html
@@ -8,7 +8,7 @@ login
 {% endblock %}
 
 {% block stage %}
-<div class="container" id="settings">
+<div class="container">
   <div class="row justify-content-center">
     <div class="col-auto">
       <h1>{% trans "Sign In" %}</h1>
