--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -37,15 +37,15 @@
       </form>
     </div>
     <div class="col-8" id="podinfo-main">
-      <h3>
+      <h4 id="podinfo-title">
         {{ podcast.title }}
-      </h3>
-      <h4>
+      </h4>
+      <h5>
         <span>
           By
         </span>
         {{ podcast.artist }}
-      </h4>
+      </h5>
       <p>
         {{ podcast.description|linebreaksbr }}
       </p>
