--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -71,11 +71,13 @@
     </div>
   </div>
   <div class="row" id="podinfo-bottom">
-    <a class="col" id="show-episodes" data-toggle="collapse" href="#episodeCollapse" aria-expanded="false" aria-controls="episodeCollapse">
-      <span>
-        Show episodes
-      </span>
-    </a>
+    <div class="col">
+      <a id="show-episodes" data-toggle="collapse" href="#episodeCollapse" aria-expanded="false" aria-controls="episodeCollapse">
+        <span>
+          Show episodes
+        </span>
+      </a>
+    </div>
   </div>
 </div>
 {% endblock %}
