--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -41,7 +41,7 @@
       <div class="container-fluid">
         <div class="row color" id="footer">
           <div class="col texture">
-            dopepod 2017 stupid fresh
+            © dopepod 2017
           </div>
         </div>
       </div>
