--- a/index/templates/index/charts.html
+++ b/index/templates/index/charts.html
@@ -1,27 +1,106 @@
-{% if chart %}
 <div class="col" id="results-wrapper">
-  <form id="result-form" method="GET" action="{% url 'charts' %}">
-    {% include 'optionsbar.html' %}
+  <form id="chart-form" method="GET" action="{% url 'charts' %}">
+    <!-- OPTIONS -->
+    <div class="row color" id="options-bar">
+      <div class="col texture">
+        <div class="row">
+          <div class="col results-info">
+            <h3>
+              {{ chart_results_info }}
+            </h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-auto ml-auto">
+            <ul class="nav nav-fade">
+              {% if chart_genres %}
+                <!-- GENRES -->
+                <li class="nav-item">
+                  <a class="nav-link" data-parent="#options-accordion" href="#options-accordion1" aria-expanded="true" aria-controls="options-accordion1" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+                    Genre
+                  </a>
+                </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </div>    
+    </div>
+    <div class="row options-select">
+      <div id="options-accordion" data-children=".item">
+        <div class="item">
+          <div id="options-accordion1" class="collapse" role="tabpanel">
+            {% if chart_genres %}
+              <div class="options-group" id="chart-genre-buttons" data-toggle="buttons">
+                {% if chart_selected_genre == 'All' %}
+                  <label class="btn options-button active">
+                    <input type="radio" name="chart-genre" value="All" checked>
+                    All
+                  </label>
+                {% else %}
+                  <label class="btn options-button">
+                    <input type="radio" name="chart-genre" value="All">
+                    All
+                  </label>
+                {% endif %}
+                {% for genre in chart_genres %}
+                  {% if chart_selected_genre == genre.name %}
+                    <label class="btn options-button active">
+                      <input type="radio" name="chart-genre" value="{{ genre.name }}" checked>
+                      {{ genre.name }}
+                    </label>
+                  {% else %}
+                    <label class="btn options-button">
+                      <input type="radio" name="chart-genre" value="{{ genre.name }}">
+                      {{ genre.name }}
+                    </label>
+                  {% endif %}
+                {% endfor %}
+              </div>
+            {% endif %}
+          </div>        
+        </div>
+      </div>
+    </div>
   </form>
   <div class="row results-row">
-    {% for podcast in chart %}
-      <div class="col-lg-2 col-md-3 col-4 result-box">
-        <a class="show-podinfo result-image" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
-        </a>
-        <h6 class="result-title">
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-            {{ podcast.title }}
-          </a>
-        </h6>
-        <p class="result-artist">
-          <span>by </span>
-          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
-            {{ podcast.artist }}
-          </a>
+    <div class="col">
+      {% for podcast in chart %}
+        <div class="row">
+          <div class="col-auto">
+            {% if chart_selected_genre == 'All' %}
+              {{ podcast.global_rank }}
+            {% else %}
+              {{ podcast.genre_rank }}
+            {% endif %}
+          </div>
+          <div class="col-auto">
+            <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+              <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
+            </a>
+          </div>
+          <div class="col">
+            <h6 class="result-title">
+              <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+                {{ podcast.title }}
+              </a>
+            </h6>
+            <p class="result-artist">
+              <span>by </span>
+              <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
+                {{ podcast.artist }}
+              </a>
+            </p>
+          </div>
+        </div>
+        {% if not forloop.last %}
+          <hr />
+        {% endif %}
+      {% empty %}
+        <p>
+          No results :p
         </p>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
 </div>
-{% endif %}
