--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -1,130 +1,135 @@
 <!-- OPTIONS -->
 <div class="row color" id="options-bar">
-  <div class="col-auto texture">
-    {% if podcasts.has_other_pages %}
-    <!-- PAGINATION -->
-      <div class="btn-group" id="page-buttons" data-toggle="buttons">
-        {% if podcasts.has_previous %}
-          <label class="btn btn-outline-primary page-button">
-            <input type="radio" name="page" value="{{ podcasts.previous_page_number }}">
-            <i class="fas fa-chevron-left"></i>
-          </label>
-        {% endif %}
-        {% for i in podcasts.paginator.page_range %}
-        {% if podcasts.number == i %}
-          <label class="btn btn-outline-primary page-button active">
-            <input type="radio" name="page" value="{{ i }}" checked>
-            {{ i }}
-          </label>
-        {% elif i > podcasts.number|add:'-4' and i < podcasts.number|add:'4' %}
-          <label class="btn btn-outline-primary page-button">
-            <input type="radio" name="page" value="{{ i }}">
-            {{ i }}
-          </label>
-        {% endif %}
-        {% endfor %}
-        {% if podcasts.has_next %}
-          <label class="btn btn-outline-primary page-button">
-            <input type="radio" name="page" value="{{ podcasts.next_page_number }}">
-            <i class="fas fa-chevron-right"></i>
-          </label>
+  <div class="col texture">
+    <div class="row">
+      <div class="col results-info">
+        <h3>
+          {{ results_info }}
+        </h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-auto">
+        {% if podcasts.has_other_pages %}
+        <!-- PAGINATION -->
+          <div class="btn-group" id="page-buttons" data-toggle="buttons">
+            {% if podcasts.has_previous %}
+              <label class="btn btn-outline-primary page-button">
+                <input type="radio" name="page" value="{{ podcasts.previous_page_number }}">
+                <i class="fas fa-chevron-left"></i>
+              </label>
+            {% endif %}
+            {% for i in podcasts.paginator.page_range %}
+            {% if podcasts.number == i %}
+              <label class="btn btn-outline-primary page-button active">
+                <input type="radio" name="page" value="{{ i }}" checked>
+                {{ i }}
+              </label>
+            {% elif i > podcasts.number|add:'-3' and i < podcasts.number|add:'3' %}
+              <label class="btn btn-outline-primary page-button">
+                <input type="radio" name="page" value="{{ i }}">
+                {{ i }}
+              </label>
+            {% endif %}
+            {% endfor %}
+            {% if podcasts.has_next %}
+              <label class="btn btn-outline-primary page-button">
+                <input type="radio" name="page" value="{{ podcasts.next_page_number }}">
+                <i class="fas fa-chevron-right"></i>
+              </label>
+            {% endif %}
+          </div>
         {% endif %}
       </div>
-    {% endif %}
-  </div>
-  <div class="col texture results-info">
-    <h3>
-      {{ results_info }}
-    </h3>
-  </div>
-  <div class="col-auto texture">
-    <ul class="nav nav-fade">
-      {% if genres %}
-        <!-- GENRES -->
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
-            Genre
-            <br />
-            <span>
-              {{ selected_genre }}
-            </span>
-          </a>
-        </li>
-      {% endif %}
-      {% if languages %}
-        <!-- LANGUAGES -->
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="collapse" data-target="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
-            Language
-            <br />
-            <span>
-              {{ selected_language }}
-            </span>
-          </a>
-        </li>
-      {% endif %}
-    </ul>
-  </div>
+      <div class="col-auto ml-auto">
+        <ul class="nav nav-fade">
+          {% if genres %}
+            <!-- GENRES -->
+            <li class="nav-item">
+              <a class="nav-link" data-parent="#options-accordion" href="#options-accordion1" aria-expanded="true" aria-controls="options-accordion1" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+                Genre
+              </a>
+            </li>
+          {% endif %}
+          {% if languages %}
+            <!-- LANGUAGES -->
+            <li class="nav-item">
+              <a class="nav-link" data-parent="#options-accordion" href="#options-accordion2" aria-expanded="true" aria-controls="options-accordion2" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+                Language
+              </a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </div>    
 </div>
 <div class="row options-select">
-  {% if genres %}
-    <div class="collapse" id="genre-collapse">
-      <div class="btn-group options-group" id="genre-buttons" data-toggle="buttons">
-        {% if selected_genre == 'All' %}
-          <label class="btn options-button active">
-            <input type="radio" name="genre" value="All" checked>
-            All
-          </label>
-        {% else %}
-          <label class="btn options-button">
-            <input type="radio" name="genre" value="All">
-            All
-          </label>
+  <div id="options-accordion" data-children=".item">
+    <div class="item">
+      <div id="options-accordion1" class="collapse" role="tabpanel">
+        {% if genres %}
+          <div class="options-group" id="genre-buttons" data-toggle="buttons">
+            {% if selected_genre == 'All' %}
+              <label class="btn options-button active">
+                <input type="radio" name="genre" value="All" checked>
+                All
+              </label>
+            {% else %}
+              <label class="btn options-button">
+                <input type="radio" name="genre" value="All">
+                All
+              </label>
+            {% endif %}
+            {% for genre in genres %}
+              {% if selected_genre == genre.name %}
+                <label class="btn options-button active">
+                  <input type="radio" name="genre" value="{{ genre.name }}" checked>
+                  {{ genre.name }}
+                </label>
+              {% else %}
+                <label class="btn options-button">
+                  <input type="radio" name="genre" value="{{ genre.name }}">
+                  {{ genre.name }}
+                </label>
+              {% endif %}
+            {% endfor %}
+          </div>
         {% endif %}
-        {% for genre in genres %}
-          {% if selected_genre == genre.name %}
-            <label class="btn options-button active">
-              <input type="radio" name="genre" value="{{ genre.name }}" checked>
-              {{ genre.name }}
-            </label>
-          {% else %}
-            <label class="btn options-button">
-              <input type="radio" name="genre" value="{{ genre.name }}">
-              {{ genre.name }}
-            </label>
-          {% endif %}
-        {% endfor %}
+      </div>        
+    </div>
+    <div class="item">
+      <div id="options-accordion2" class="collapse" role="tabpanel">
+        {% if languages %}
+          <div class="options-group" id="language-buttons" data-toggle="buttons">
+            {% if selected_language == 'All' %}
+              <label class="btn options-button mx-auto active">
+                <input type="radio" name="language" value="All" checked>
+                All
+              </label>
+            {% else %}
+              <label class="btn options-button mx-auto">
+                <input type="radio" name="language" value="All">
+                All
+              </label>
+            {% endif %}
+            {% for language in languages %}
+              {% if selected_language == language.name %}
+                <label class="btn options-button mx-auto active">
+                  <input type="radio" name="language" value="{{ language.name }}" checked>
+                  {{ language.name }}
+                </label>
+              {% else %}
+                <label class="btn options-button mx-auto">
+                  <input type="radio" name="language" value="{{ language.name }}">
+                  {{ language.name }}
+                </label>
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
     </div>
-  {% endif %}
-  {% if languages %}
-    <div class="collapse" id="language-collapse">
-      <div class="btn-group options-group" id="language-buttons" data-toggle="buttons">
-        {% if selected_language == 'All' %}
-          <label class="btn options-button mx-auto active">
-            <input type="radio" name="language" value="All" checked>
-            All
-          </label>
-        {% else %}
-          <label class="btn options-button mx-auto">
-            <input type="radio" name="language" value="All">
-            All
-          </label>
-        {% endif %}
-        {% for language in languages %}
-          {% if selected_language == language.name %}
-            <label class="btn options-button mx-auto active">
-              <input type="radio" name="language" value="{{ language.name }}" checked>
-              {{ language.name }}
-            </label>
-          {% else %}
-            <label class="btn options-button mx-auto">
-              <input type="radio" name="language" value="{{ language.name }}">
-              {{ language.name }}
-            </label>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </div>
-  {% endif %}
+  </div>
 </div>
+
