--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -37,15 +37,15 @@
             </form>
           </div>
           <div class="col-auto">
-            <button class="btn btn-outline-primary">
+            <a class="btn btn-outline-primary" href="{{ episode.url }}">
               Download
-            </button>
+            </a>
           </div>
         </div>
         <div class="row">
           <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel" aria-labelledby="show-more{{ forloop.counter }}" data-parent="#episode-accordion">
             <div class="col">
-              {{ episode.summary }}
+              {{ episode.summary|safe }}
             </div>
           </div>
         </div>
